--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Aya Mojahid - Développeuse Web & Designer</title>
+
+<link rel="icon" type="image/png" href="https://www.pngfind.com/pngs/m/472-4725278_technologist-sticker-woman-technologist-emoji-hd-png-download.png">
   
-  <!-- CSS Libraries -->
+<!-- CSS Libraries -->
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -34,8 +36,10 @@
 
   <!-- Navigation -->
   <header class="fixed top-0 w-full z-50 glass border-b border-gray-800 dark:border-gray-700">
+    
     <div class="max-w-7xl mx-auto px-6 py-4 flex items-center justify-between">
       <a href="#home" class="flex items-center gap-3 hover-lift">
+
         <div class="w-12 h-12 rounded-full flex items-center justify-center font-bold text-white neon-glow pulse-glow" 
              style="background:linear-gradient(135deg, var(--neon1), var(--neon2));">
           <i class="fas fa-code"></i>
@@ -60,14 +64,15 @@
           <i class="fas fa-cogs text-yellow-400"></i>
           Compétences
         </a>
-        <a href="#projects" class="nav-item flex items-center">
-          <i class="fas fa-briefcase text-green-400"></i>
-          Projets
-        </a>
         <a href="#cv" class="nav-item flex items-center">
           <i class="fas fa-file-alt text-pink-400"></i>
           CV
         </a>
+        <a href="#projects" class="nav-item flex items-center">
+          <i class="fas fa-briefcase text-green-400"></i>
+          Projets
+        </a>
+        
         <a href="#contact" class="nav-item flex items-center">
           <i class="fas fa-envelope text-orange-400"></i>
           Contact
@@ -213,7 +218,7 @@
               <a href="#" class="w-10 h-10 rounded-full glass flex items-center justify-center hover-lift hover:bg-blue-600">
                 <i class="fab fa-linkedin-in"></i>
               </a>
-              <a href="#" class="w-10 h-10 rounded-full glass flex items-center justify-center hover-lift hover:bg-pink-500">
+              <a href="https://portfolio-aya-mojahid.vercel.app/" class="w-10 h-10 rounded-full glass flex items-center justify-center hover-lift hover:bg-pink-500">
                 <i class="fab fa-dribbble"></i>
               </a>
               <a href="https://x.com/AYAMJHD0323?t=ZjSbU1H3RrXy3FqjfV9s4Q" class="w-10 h-10 rounded-full glass flex items-center justify-center hover-lift hover:bg-blue-400">
@@ -780,7 +785,7 @@
           <a href="#" class="w-12 h-12 rounded-full glass flex items-center justify-center hover-lift hover:bg-blue-600">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a href="#" class="w-12 h-12 rounded-full glass flex items-center justify-center hover-lift hover:bg-pink-500">
+          <a href="https://portfolio-aya-mojahid.vercel.app/" class="w-12 h-12 rounded-full glass flex items-center justify-center hover-lift hover:bg-pink-500">
             <i class="fab fa-dribbble"></i>
           </a>
           <a href="https://x.com/AYAMJHD0323?t=ZjSbU1H3RrXy3FqjfV9s4Q" class="w-12 h-12 rounded-full glass flex items-center justify-center hover-lift hover:bg-blue-400">
