--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr" class="antialiased">
 <head>
   <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Aya Mojahid - Développeuse Web & Designer</title>
 
 <link rel="icon" type="image/png" href="https://www.pngfind.com/pngs/m/472-4725278_technologist-sticker-woman-technologist-emoji-hd-png-download.png">
